--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,15 @@
             "email": "daylight@shelke.org"
         }
     ],
-    "require": {},
+    "require": {
+        "formigone/php-chain": "^0.1.1"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "": "src/"
+        }
     }
 }
